# log_analyzer

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
log_analyzer/: __main__.py  analytics.py  cli.py  log.py  misc.py  parser.py
tests/: test_analytics.py  test_cli.py  test_log.py  test_misc.py  test_parser.py
tests/fixtures/: test_log.txt
